--- a/config/drupal.conf
+++ b/config/drupal.conf
@@ -72,17 +72,16 @@ server {
         # Security note: If you're running a version of PHP older than the
         # latest 5.3, you should have "cgi.fix_pathinfo = 0;" in php.ini.
         # See http://serverfault.com/q/627903/94922 for details.
-        include fastcgi_params;
+
+        include /etc/nginx/fastcgi_params;
+        fastcgi_pass fpm:9000;
+
         # Block httpoxy attacks. See https://httpoxy.org/.
         fastcgi_param HTTP_PROXY "";
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
         fastcgi_param QUERY_STRING $query_string;
         fastcgi_intercept_errors on;
-        # PHP 5 socket location.
-        #fastcgi_pass unix:/var/run/php5-fpm.sock;
-        # PHP 7 socket location.
-        fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
     }
 
     # Fighting with Styles? This little gem is amazing.
