--- a/config/drupal.conf
+++ b/config/drupal.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name localhost;
 
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/html/public;
 
     location = /favicon.ico {
         log_not_found off;
