Update codeigniter docker

--- a/config/codeigniter.conf
+++ b/config/codeigniter.conf
@@ -1,8 +1,12 @@
 server {
+        listen 80;
         server_name localhost;
 
         root /var/www/codeignitor;
         index index.html index.php;
+
+        access_log /var/log/nginx/localhost_access.log;
+        error_log /var/log/nginx/localhost_error.log;
 
         # set expiration of assets to MAX for caching
         location ~* \.(ico|css|js|gif|jpe?g|png)(\?[0-9]+)?$ {
@@ -16,7 +20,10 @@ server {
         }
 
         location ~* \.php$ {
-                fastcgi_pass 127.0.0.1:9000;
-                include fastcgi.conf;
+                try_files $uri =404;
+                include /etc/nginx/fastcgi_params;
+                fastcgi_pass fpm:9000;
+                fastcgi_index index.php;
+                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
 }
