--- a/config/codeigniter.conf
+++ b/config/codeigniter.conf
@@ -2,7 +2,7 @@ server {
         listen 80;
         server_name localhost;
 
-        root /var/www/codeignitor;
+        root /var/www/codeigniter;
         index index.html index.php;
 
         access_log /var/log/nginx/localhost_access.log;
