--- a/config/codeigniter.conf
+++ b/config/codeigniter.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/codeigniter;
+    root /usr/share/nginx/html;
     index index.html index.php;
 
     access_log /var/log/nginx/localhost_access.log;
@@ -10,20 +10,20 @@ server {
 
     # set expiration of assets to MAX for caching
     location ~* \.(ico|css|js|gif|jpe?g|png)(\?[0-9]+)?$ {
-            expires max;
-            log_not_found off;
+        expires max;
+        log_not_found off;
     }
 
     location / {
-            # Check if a file or directory index file exists, else route it to index.php.
-            try_files $uri $uri/ /index.php;
+        # Check if a file or directory index file exists, else route it to index.php.
+        try_files $uri $uri/ /index.php;
     }
 
     location ~* \.php$ {
-            try_files $uri =404;
-            include /etc/nginx/fastcgi_params;
-            fastcgi_pass fpm:9000;
-            fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        try_files $uri =404;
+        include /etc/nginx/fastcgi_params;
+        fastcgi_pass fpm:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 }
